// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return no results found embed 1`] = `
{
  "description": "*No results found for \`query\`.*",
  "fields": [],
}
`;

exports[`should transform decorated combat page to Discord embed (rarity: $rarity) 1`] = `
{
  "color": 8115825,
  "fields": [
    {
      "inline": true,
      "name": "Cost",
      "value": "0",
    },
    {
      "inline": true,
      "name": "Range",
      "value": "Near",
    },
    {
      "inline": true,
      "name": "Rarity",
      "value": "Common",
    },
    {
      "inline": true,
      "name": "Description",
      "value": "description",
    },
    {
      "inline": true,
      "name": "Dice",
      "value": "description",
    },
  ],
  "image": {
    "url": "https://s3bucketname.s3.amazonaws.comimage.png",
  },
  "title": "name",
}
`;

exports[`should transform decorated combat page to Discord embed (rarity: $rarity) 2`] = `
{
  "color": 3170234,
  "fields": [
    {
      "inline": true,
      "name": "Cost",
      "value": "0",
    },
    {
      "inline": true,
      "name": "Range",
      "value": "Near",
    },
    {
      "inline": true,
      "name": "Rarity",
      "value": "Uncommon",
    },
    {
      "inline": true,
      "name": "Description",
      "value": "description",
    },
    {
      "inline": true,
      "name": "Dice",
      "value": "description",
    },
  ],
  "image": {
    "url": "https://s3bucketname.s3.amazonaws.comimage.png",
  },
  "title": "name",
}
`;

exports[`should transform decorated combat page to Discord embed (rarity: $rarity) 3`] = `
{
  "color": 7022271,
  "fields": [
    {
      "inline": true,
      "name": "Cost",
      "value": "0",
    },
    {
      "inline": true,
      "name": "Range",
      "value": "Near",
    },
    {
      "inline": true,
      "name": "Rarity",
      "value": "Rare",
    },
    {
      "inline": true,
      "name": "Description",
      "value": "description",
    },
    {
      "inline": true,
      "name": "Dice",
      "value": "description",
    },
  ],
  "image": {
    "url": "https://s3bucketname.s3.amazonaws.comimage.png",
  },
  "title": "name",
}
`;

exports[`should transform decorated combat page to Discord embed (rarity: $rarity) 4`] = `
{
  "color": 15449600,
  "fields": [
    {
      "inline": true,
      "name": "Cost",
      "value": "0",
    },
    {
      "inline": true,
      "name": "Range",
      "value": "Near",
    },
    {
      "inline": true,
      "name": "Rarity",
      "value": "Unique",
    },
    {
      "inline": true,
      "name": "Description",
      "value": "description",
    },
    {
      "inline": true,
      "name": "Dice",
      "value": "description",
    },
  ],
  "image": {
    "url": "https://s3bucketname.s3.amazonaws.comimage.png",
  },
  "title": "name",
}
`;

exports[`should transform disambiguation page to Discord embed 1`] = `
{
  "fields": [
    {
      "inline": true,
      "name": "**disambiguation** may refer to:",
      "value": " > - query
 > - query",
    },
  ],
}
`;

exports[`should transform negative decorated abno page to Discord embed 1`] = `
{
  "color": 13713729,
  "fields": [
    {
      "inline": true,
      "name": "Flavor text",
      "value": "TestFlavorText",
    },
    {
      "inline": true,
      "name": "Effect",
      "value": "TestDescription",
    },
    {
      "inline": true,
      "name": "Bias",
      "value": "-1",
    },
    {
      "inline": true,
      "name": "Type",
      "value": "Breakdown",
    },
    {
      "inline": true,
      "name": "Emotion level",
      "value": "1",
    },
    {
      "inline": true,
      "name": "Floor",
      "value": "None",
    },
  ],
  "image": {
    "url": "https://s3bucketname.s3.amazonaws.comtest.png",
  },
  "title": "TestAbnoPage",
}
`;

exports[`should transform postive decorated abno page to Discord embed 1`] = `
{
  "color": 4247160,
  "fields": [
    {
      "inline": true,
      "name": "Flavor text",
      "value": "TestFlavorText",
    },
    {
      "inline": true,
      "name": "Effect",
      "value": "TestDescription",
    },
    {
      "inline": true,
      "name": "Bias",
      "value": "1",
    },
    {
      "inline": true,
      "name": "Type",
      "value": "Awakening",
    },
    {
      "inline": true,
      "name": "Emotion level",
      "value": "1",
    },
    {
      "inline": true,
      "name": "Floor",
      "value": "None",
    },
  ],
  "image": {
    "url": "https://s3bucketname.s3.amazonaws.comtest.png",
  },
  "title": "TestAbnoPage",
}
`;
